[gd_scene load_steps=7 format=3 uid="uid://k0500k0qhn7n"]

[ext_resource type="Script" path="res://scripts/teleport_activator.gd" id="1_0okx7"]
[ext_resource type="Texture2D" uid="uid://cwowq6iuhuyha" path="res://sprites/environment/teleport_activator_active.png" id="1_40dr7"]
[ext_resource type="Texture2D" uid="uid://cw8w06mf1i7wo" path="res://sprites/environment/teleport_activator_inactive.png" id="2_d78f6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_36gfb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_40dr7")
}],
"loop": false,
"name": &"active",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d78f6")
}],
"loop": false,
"name": &"inactive",
"speed": 0.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mssss"]
height = 48.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3u6k"]
size = Vector2(58, 87)

[node name="TeleportActivator" type="StaticBody2D"]
script = ExtResource("1_0okx7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_36gfb")
animation = &"inactive"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -3)
shape = SubResource("CapsuleShape2D_mssss")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_q3u6k")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
